html manager completed

--- a/src/app/manager/manager1/manager1.component.html
+++ b/src/app/manager/manager1/manager1.component.html
@@ -5,14 +5,14 @@
   <div class="dateInputsWrap">
     <div class="dateInput">
       <div class="calendal">
-        <img src="images/calendar.png" alt="alt">
+        <img src="assets/images/calendar.png" alt="alt">
       </div>
       <input type="text" placeholder="25/06/2019">
     </div>
     <div class="sep">—</div>
     <div class="dateInput">
       <div class="calendal">
-        <img src="images/calendar.png" alt="alt">
+        <img src="assets/images/calendar.png" alt="alt">
       </div>
       <input type="text" placeholder="25/06/2019">
     </div>
@@ -23,8 +23,8 @@
   <!--  processed  -->
 
   <div class="processedWrap">
-    <img src="images/close.png" alt="aclt" class="close">
-    <img src="images/Report.png" alt="alt" class="decor">
+    <img src="assets/images/close.png" alt="aclt" class="close">
+    <img src="assets/images/Report.png" alt="alt" class="decor">
     <div class="text">Обработано 100% документов до <span>03.07.2019</span></div>
   </div>
 
@@ -34,10 +34,10 @@
 
   <div class="mainTabs">
 
-    <div class="tab activeTab">
+    <div class="tab activeTab"  [routerLink]="['/manager1']">
       <div class="tabHeader">
         <div class="imgHolder">
-          <img src="images/video.png" alt="alt">
+          <img src="assets/images/video.png" alt="alt">
         </div>
         <div class="text">Не просмотренные видео</div>
       </div>
@@ -47,10 +47,10 @@
       <div class="desc">Новых видео</div>
     </div>
 
-    <div class="tab">
+    <div class="tab" [routerLink]="['/manager2']">
       <div class="tabHeader">
         <div class="imgHolder">
-          <img src="images/tabImg2.png" alt="alt">
+          <img src="assets/images/tabImg2.png" alt="alt">
         </div>
         <div class="text">Статистика станции</div>
       </div>
@@ -60,10 +60,10 @@
       <div class="desc">Изменения в рейтинге</div>
     </div>
 
-    <div class="tab">
+    <div class="tab" [routerLink]="['/manager3']">
       <div class="tabHeader">
         <div class="imgHolder">
-          <img src="images/tabImg3.png" alt="alt">
+          <img src="assets/images/tabImg3.png" alt="alt">
         </div>
         <div class="text">Рейтинг</div>
       </div>
@@ -73,16 +73,16 @@
       <div class="desc">Изменения статистики</div>
     </div>
 
-    <div class="tab">
+    <div class="tab" [routerLink]="['/manager4']">
       <div class="tabHeader">
         <div class="imgHolder">
-          <img src="images/tabImg4.png" alt="alt">
+          <img src="assets/images/tabImg4.png" alt="alt">
         </div>
         <div class="text">Чеклист</div>
       </div>
 
       <div class="num">
-        <img src="images/Report.png" alt="alt">
+        <img src="assets/images/Report.png" alt="alt">
       </div>
 
       <div class="desc">Есть изменеия в чеклисте</div>
@@ -104,11 +104,11 @@
       <div class="filtersWrap">
         <div class="filter">
           <div class="value">Фильтр</div>
-          <img src="images/filterArrow.png" alt="alt">
+          <img src="assets/images/filterArrow.png" alt="alt">
         </div>
         <div class="filter">
           <div class="value">KPI</div>
-          <img src="images/filterArrow.png" alt="alt">
+          <img src="assets/images/filterArrow.png" alt="alt">
         </div>
       </div>
     </div>
@@ -116,10 +116,10 @@
     <div class="singleVideo">
       <div class="videoWrap">
         <div class="videoHolder">
-          <img src="images/videoPreview.png" alt="alt">
+          <img src="assets/images/videoPreview.png" alt="alt">
         </div>
         <div class="videoHolder">
-          <img src="images/videoPreview.png" alt="alt">
+          <img src="assets/images/videoPreview.png" alt="alt">
         </div>
       </div>
 
@@ -131,7 +131,7 @@
           </div>
 
           <div class="favorite">
-            <img src="images/star.png" alt="alt">
+            <img src="assets/images/star.png" alt="alt">
           </div>
         </div>
 
@@ -139,29 +139,29 @@
           <div class="column">
             <div class="item">
               <div class="text">Приветствие клиента</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Предложить карту лояльности</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Региональная акция</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
           </div>
           <div class="column">
             <div class="item">
               <div class="text">Приветствие клиента</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Предложить карту лояльности</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Региональная акция</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
           </div>
         </div>
@@ -171,10 +171,10 @@
     <div class="singleVideo">
       <div class="videoWrap">
         <div class="videoHolder">
-          <img src="images/videoPreview.png" alt="alt">
+          <img src="assets/images/videoPreview.png" alt="alt">
         </div>
         <div class="videoHolder">
-          <img src="images/videoPreview.png" alt="alt">
+          <img src="assets/images/videoPreview.png" alt="alt">
         </div>
       </div>
 
@@ -186,7 +186,7 @@
           </div>
 
           <div class="favorite">
-            <img src="images/star.png" alt="alt">
+            <img src="assets/images/star.png" alt="alt">
           </div>
         </div>
 
@@ -194,29 +194,29 @@
           <div class="column">
             <div class="item">
               <div class="text">Приветствие клиента</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Предложить карту лояльности</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Региональная акция</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
           </div>
           <div class="column">
             <div class="item">
               <div class="text">Приветствие клиента</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Предложить карту лояльности</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Региональная акция</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
           </div>
         </div>
@@ -226,10 +226,10 @@
     <div class="singleVideo">
       <div class="videoWrap">
         <div class="videoHolder">
-          <img src="images/videoPreview.png" alt="alt">
+          <img src="assets/images/videoPreview.png" alt="alt">
         </div>
         <div class="videoHolder">
-          <img src="images/videoPreview.png" alt="alt">
+          <img src="assets/images/videoPreview.png" alt="alt">
         </div>
       </div>
 
@@ -241,7 +241,7 @@
           </div>
 
           <div class="favorite">
-            <img src="images/star.png" alt="alt">
+            <img src="assets/images/star.png" alt="alt">
           </div>
         </div>
 
@@ -249,29 +249,29 @@
           <div class="column">
             <div class="item">
               <div class="text">Приветствие клиента</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Предложить карту лояльности</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Региональная акция</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
           </div>
           <div class="column">
             <div class="item">
               <div class="text">Приветствие клиента</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Предложить карту лояльности</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Региональная акция</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
           </div>
         </div>
@@ -281,10 +281,10 @@
     <div class="singleVideo">
       <div class="videoWrap">
         <div class="videoHolder">
-          <img src="images/videoPreview.png" alt="alt">
+          <img src="assets/images/videoPreview.png" alt="alt">
         </div>
         <div class="videoHolder">
-          <img src="images/videoPreview.png" alt="alt">
+          <img src="assets/images/videoPreview.png" alt="alt">
         </div>
       </div>
 
@@ -296,7 +296,7 @@
           </div>
 
           <div class="favorite">
-            <img src="images/star.png" alt="alt">
+            <img src="assets/images/star.png" alt="alt">
           </div>
         </div>
 
@@ -304,29 +304,29 @@
           <div class="column">
             <div class="item">
               <div class="text">Приветствие клиента</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Предложить карту лояльности</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Региональная акция</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
           </div>
           <div class="column">
             <div class="item">
               <div class="text">Приветствие клиента</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Предложить карту лояльности</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
             <div class="item">
               <div class="text">Региональная акция</div>
-              <img src="images/Message.png" alt="alt">
+              <img src="assets/images/Message.png" alt="alt">
             </div>
           </div>
         </div>
