--- a/src/app/manager/manager1/manager1.component.html
+++ b/src/app/manager/manager1/manager1.component.html
@@ -1,7 +1,6 @@
 <div class="mainWrap">
 
   <!--  date inputs  -->
-
   <div class="dateInputsWrap">
     <div class="dateInput">
       <div class="calendal">
@@ -22,72 +21,13 @@
 
   <!--  processed  -->
 
-  <div class="processedWrap">
-    <img src="assets/images/close.png" alt="aclt" class="close">
-    <img src="assets/images/Report.png" alt="alt" class="decor">
-    <div class="text">Обработано 100% документов до <span>03.07.2019</span></div>
-  </div>
+  <app-processed></app-processed>
 
   <!--  /processed  -->
 
   <!--  main tabs  -->
 
-  <div class="mainTabs">
-
-    <div class="tab activeTab"  [routerLink]="['/manager1']">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/video.png" alt="alt">
-        </div>
-        <div class="text">Не просмотренные видео</div>
-      </div>
-
-      <div class="num">399</div>
-
-      <div class="desc">Новых видео</div>
-    </div>
-
-    <div class="tab" [routerLink]="['/manager2']">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/tabImg2.png" alt="alt">
-        </div>
-        <div class="text">Статистика станции</div>
-      </div>
-
-      <div class="num">2,5%</div>
-
-      <div class="desc">Изменения в рейтинге</div>
-    </div>
-
-    <div class="tab" [routerLink]="['/manager3']">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/tabImg3.png" alt="alt">
-        </div>
-        <div class="text">Рейтинг</div>
-      </div>
-
-      <div class="num">5<sup>+2</sup></div>
-
-      <div class="desc">Изменения статистики</div>
-    </div>
-
-    <div class="tab" [routerLink]="['/manager4']">
-      <div class="tabHeader">
-        <div class="imgHolder">
-          <img src="assets/images/tabImg4.png" alt="alt">
-        </div>
-        <div class="text">Чеклист</div>
-      </div>
-
-      <div class="num">
-        <img src="assets/images/Report.png" alt="alt">
-      </div>
-
-      <div class="desc">Есть изменеия в чеклисте</div>
-    </div>
-  </div>
+  <app-main-tabs></app-main-tabs>
 
   <!--  /main tabs  -->
 
