--- a/src/app/top/top1/top1.component.html
+++ b/src/app/top/top1/top1.component.html
@@ -23,11 +23,7 @@
 
   <!--  processed  -->
 
-  <div class="processedWrap">
-    <img src="assets/images/close.png" alt="aclt" class="close">
-    <img src="assets/images/Report.png" alt="alt" class="decor">
-    <div class="text">Обработано 100% документов до <span>03.07.2019</span></div>
-  </div>
+  <app-processed></app-processed>
 
   <!--  /processed  -->
 
